# ai

./: .rusty-hook.toml  README.md  go.mod  go.sum  main.go
assets/: execute_python_script_description.txt  execute_shell_script_description.txt  system_message.txt
cmd/: root.go
crates/chat/: Cargo.toml
crates/chat-derive/: Cargo.toml
crates/chat-derive/src/: lib.rs
crates/chat/src/: funcs.rs  history.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: dto.rs  funcs.rs  history.rs  lib.rs  utils.rs
hooks/: pre-commit.sh
internal/state/: context.go  state.go
pkg/ask/: ask.go
pkg/chat/: chat.go  data.go  middleware.go
pkg/middlewares/: middlewares.go
pkg/middlewares/funcs/: context.go  middleware.go  mod.go
pkg/middlewares/history/: backend.go  format.go  middleware.go
pkg/middlewares/imgen/: middleware.go
pkg/middlewares/limit/: middleware.go
pkg/middlewares/openai/: middleware.go
pkg/middlewares/python/: middleware.go
pkg/middlewares/script/: middleware.go
pkg/middlewares/shell/: middleware.go
pkg/middlewares/system/: middleware.go
pkg/utils/: utils.go
