[package]
name = "ai-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ai = { version = "0.1.0", path = "../core" }
anyhow = "1.0.75"
dialoguer = "0.10.4"
directories = "5.0.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sys-info = "0.9.1"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
